Update unit tests to work with Conflux's CIP-37 Conflux addresses are no longer compatible with Ethereum addresses. This broke some tests relating to addresses, which are fixed by this commit. I have also added the ability to optionally provide separate expected values for conflux and ethereum chains in tests.
Tests in unittests/test.yml can now be of the form:
  - args: []
    expectValue:
      ethereum: 0x000000000000000000000000000000000000efca
      conflux: "cfx:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaht3jgurt0adt"
    name: get
In addition to the existing:
  - args: []
    expectValue: 9
    name: get_w

js-conflux-sdk has been updated to ^1.7.0 which is a more recent version that takes the CIP-37 changes into account.

See also: https://medium.com/conflux-network/why-were-updating-the-format-of-our-wallet-addresses-2973ce261e3c

--- a/unittests/tests.yml
+++ b/unittests/tests.yml
@@ -4,7 +4,9 @@ address:
     expectSuccess: true
     name: init
   - args: []
-    expectValue: 0x000000000000000000000000000000000000efca
+    expectValue:
+      ethereum: 0x000000000000000000000000000000000000efca
+      conflux: "cfx:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaht3jgurt0adt"
     name: get
   - args: ["0xd115bffabbdd893a6f7cea402e7338643ced44a6"]
     expectSuccess: true
