Add autorun_unittests.sh and minor related changes autorun_unittests.sh will install the relevant dependencies for the unittests and run the unit tests, comparing the final output with expected_output.log. DeepSEA should be built first. (e.g. via make; make edsger).

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,12 @@ docs/*.html
 docs/coqdoc/*
 !docs/coqdoc/custom-coqdoc.css
 !docs/coqdoc/custom-coqdoc-css-licence
+
+# Unit tests
+unittests/node_modules
+unittests/build/
+amm_with_addresses.ds
+unittests/contracts/erc20Token0.ds
+unittests/contracts/erc20Token1.ds
+unittests/contracts/liquidityToken.ds
+unittests/test_output.log
