Add basic integration tests Testing compilation of .ds files to Coq and trivial FunctionalCorrectness.v files Tests like trivial_1 and trivial_2 can be added as additional directories. Each folder should have a run_tests.sh file (this will get run automatically by autorun_integration_tests.sh) which produces a test_summary.log file. The resulting test_summary.log file should be identical to the expected_summary.log file in each directory. A separate test_summary.log file is also generated overall in the integration-tests directory. The current trivial tests check that `dsc ... coq` succeeds, that FunctionalCorrectness.v compiles, and that FunctionalCorrectness.v has no assumptions (e.g. admits). The admit checking is VERY FRAGILE and it may well report success in some failure cases - further work is needed to make it fully robust.

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,10 @@ unittests/contracts/erc20Token0.ds
 unittests/contracts/erc20Token1.ds
 unittests/contracts/liquidityToken.ds
 unittests/test_output.log
+
+# Integration tests
+integration-tests/*/_CoqProject
+integration-tests/test_summary.log
+integration-tests/*/*.log
+integration-tests/*/*/_CoqProject
+integration-tests/*/*/*.v
