Fix .travis.yml Was running in parallel beforehand in separate environments. Now they run sequentially.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,15 @@
+os: linux
 language: nix
+dist: xenial
 
 branches:
   only:
   - main
 
-jobs:
-  include:
-    - stage: Build - make
-      script: nix-shell --run "make"
-    - stage: Build - make edsger
-      script: nix-shell --run "make edsger"
-    - stage: Unit tests
-      script: nix-shell --run "cd unittests; ./autorun_unittests.sh"
-    - stage: Integration tests
-      script: nix-shell --run "cd integration-tests; ./autorun_integration_tests.sh"
+install:
+- nix-shell --run "make"
+- nix-shell --run "make edsger"
+
+script:
+- nix-shell --run "cd unittests; ./autorun_unittests.sh"
+- nix-shell --run "cd integration-tests; ./autorun_integration_tests.sh"
