Add caching for conflux-rust build This should work both offline and for Travis, with added clarity about which version of conflux-rust has been built by including the conflux rust commit hash in the directory name.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ branches:
   only:
   - main
 
+cache:
+  directories:
+  - $TRAVIS_BUILD_DIR/../conflux-rust-3ea27d693c090cc99cb9f4096f8be1d0df83f265
+
 install:
 - nix-shell --run "make"
 - nix-shell --run "make edsger"
